js/js.translator/testData/incremental/invalidationWithPL/removeFunctionFromChainCallWithCrossModuleInliner/lib1/klass.0.kt
class Klass {
    inline fun foo() = 0
}